design-principles-02/src/main/java/com/farhad/example/design_principles02/solidprinciples_and_designpatterns/isp/good/Address.java
package com.farhad.example.design_principles02.solidprinciples_and_designpatterns.isp.good;

public class Address {

}
