design-principles-02/src/main/java/com/farhad/example/design_principles02/solidprinciples_and_designpatterns/isp/bad/Address.java
package com.farhad.example.design_principles02.solidprinciples_and_designpatterns.isp.bad;

public class Address {

}
